<resources>
    <string name="app_name">MadProject</string>
    <string name="Login" />
    <string name="txtDescription">Description</string>
    <string name="txtImage">Images</string>
    <string name="txtCategory">Category</string>
    <string name="txtPrice">Price</string>
    <string name="txtItemName">Item Name</string>
    <string name="title_activity_view_items">ViewItems</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtTotalItems">Total: x Items</string>
    <string name="displayItemName" />
</resources>