<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/showItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="OnClickViewBtn"
        android:text="View Gift Items"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"></Button>


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".InsertItem">


            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtPrice"
                android:textColor="@color/PinkGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextItemName"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/txtImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtImage"
                android:textColor="@color/PinkGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextCategory"
                tools:layout_editor_absoluteX="25dp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtDescription"
                android:textColor="@color/PinkGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/txtItemName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/txtItemName"
                android:textColor="@color/PinkGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_background"
                android:ems="10"

                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/txtCategory"
                tools:layout_editor_absoluteX="29dp" />

            <TextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtCategory"
                android:textColor="@color/PinkGrey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrice"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/txtItemName2"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice"
                tools:layout_editor_absoluteX="16dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/txtImage"
                app:layout_constraintTop_toBottomOf="@+id/txtImage"
                app:srcCompat="@drawable/image_gallary" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_background"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription"
                tools:layout_editor_absoluteX="37dp" />

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_background"
                android:onClick="onClickAdd"
                android:text="Add Item"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
                tools:layout_editor_absoluteX="16dp" />

            <ImageButton
                android:id="@+id/imageButtonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/add_background"
                android:onClick="PickImage"
                android:tint="@color/darkPink"
                app:layout_constraintEnd_toEndOf="@+id/txtImage"
                app:layout_constraintTop_toTopOf="@+id/txtImage"
                app:srcCompat="@android:drawable/ic_input_add" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>